# openevolve

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-lint.yml  release.yml
configs/: default_config.yaml
examples/: README.md
examples/algotune/: GEMINI_FLASH_2.5_EXPERIMENT_REPORT.md  O4_MINI_EXPERIMENT_REPORT.md  README.md  algotune_benchmark_results.json  create_task.py  generate_all_tasks.py  gpt4omini_benchmark_results.json  requirements.txt  run_benchmark.py  task_adapter.py  test_generate_tasks.py
examples/circle_packing/: best_program.py  evaluator.py
examples/circle_packing_with_artifacts/: evaluator.py
examples/function_minimization/: config.yaml  evaluator.py
examples/llm_prompt_optimazation/: README.md  best_program.txt  config.yaml  data.json  evaluator.py  initial_prompt.txt  run.sh
examples/llm_prompt_optimization/: README.md  config.yaml  emotion_prompt.txt  evaluate_prompts.py  evaluator.py
examples/mlx_attention_optimization/: README.md  attention_benchmark.py  attention_grid_search.py  config.yaml  (+7 more)
openevolve/: __init__.py  _version.py  cli.py  config.py  controller.py  database.py  evaluation_result.py  evaluator.py  iteration.py  process_parallel.py  threaded_parallel.py
scripts/: visualizer.py
tests/: test_cascade_validation.py  test_checkpoint_resume.py  test_database.py  test_evaluator_timeout.py  test_feature_stats_persistence.py  test_grid_stability.py  test_island_isolation.py  test_island_migration.py  test_island_parent_consistency.py  test_island_tracking.py  test_iteration_counting.py  test_map_elites_features.py  test_model_parameter_demo.py  test_openai_model_detection.py  test_process_parallel.py  test_prompt_sampler_comprehensive.py
(+571 files in other folders)
