[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openevolve"
dynamic = ["version"]
description = "Open-source implementation of AlphaEvolve"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "codelion"}
]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.22.0",
    "tqdm>=4.64.0",
    "flask",
    "botorch>=0.10.0",
    "orjson>=3.11.1",
    "cvxopt>=1.3.2",
    "numpy",
    "pandas",
    "cython",
    "numba",
    "dask",
    "pulp", 
    "scipy", 
    "ortools>=9.7.0,<9.8.0", 
    "pyomo", 
    "highspy", 
    "networkx", 
    "python-sat", 
    "jax", 
    "diffrax",
    "sympy",
    "faiss-cpu",
    "cryptography",
    "scikit-learn",
    "hdbscan",
    "cvxpy",
    "torch",
    "pot",
    "ecos",
    "litellm",
    "google-generativeai",
    "pylint",
    "line_profiler",
    "toml",
    "orjson",
    "pyaml",
    "pillow",
    "pythran",
    "dace",
    "psutil"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.scripts]
openevolve-run = "openevolve.cli:main"

[tool.setuptools.packages.find]
include = ["openevolve*"]

[tool.setuptools.dynamic]
version = {attr = "openevolve._version.__version__"}

[tool.uv.workspace]
members = [
]
